gccida/g3/init_propagate_block_info
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/init_propagate_block_info/src/flow.c:2272:4: error: expected ';' after expression
rtx v21; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/init_propagate_block_info/src/flow.c:2272:5: error: use of undeclared identifier 'v21'; did you mean 'v11'?
rtx v21; // rax 
    ^~~
    v11
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/init_propagate_block_info/src/flow.c:2263:31: note: 'v11' declared here
 struct propagate_block_info *v11; // r12 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/init_propagate_block_info/src/flow.c:2277:30: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
v24[0] = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)bb, ( __m128i)( unsigned __int64)live); 
                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/init_propagate_block_info/src/flow.c:2277:63: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
v24[0] = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)bb, ( __m128i)( unsigned __int64)live); 
                                                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/init_propagate_block_info/src/flow.c:2290:28: error: expected expression
v11->reg_next_use = ( rtx *)xcalloc( v16, 8uLL); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/init_propagate_block_info/src/flow.c:2308:43: error: expected ')'
for ( i = bb->head; end != i; end = ( rtx)end[1] ) 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/init_propagate_block_info/src/flow.c:2308:5: note: to match this '('
for ( i = bb->head; end != i; end = ( rtx)end[1] ) 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/init_propagate_block_info/src/flow.c:2312:13: error: expected ';' after expression
v19 = ( rtx)end[2]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/init_propagate_block_info/src/flow.c:2318:1: error: use of undeclared identifier 'v21'
v21 = canon_rtx( rtx); 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/init_propagate_block_info/src/flow.c:2319:7: error: use of undeclared identifier 'v21'; did you mean 'v11'?
v22 = v21; 
      ^~~
      v11
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/init_propagate_block_info/src/flow.c:2263:31: note: 'v11' declared here
 struct propagate_block_info *v11; // r12 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/init_propagate_block_info/src/flow.c:2320:21: error: use of undeclared identifier 'v21'
if ( ( *( ( _BYTE *)v21 + 3) & 4) == 0 ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/init_propagate_block_info/src/flow.c:2322:24: error: use of undeclared identifier 'v21'
v23.rtwint = ( __int64)v21->fld[0]; 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/init_propagate_block_info/src/flow.c:2325:29: error: expected expression
&& global_rtl[3] == *( rtx *)( v23.rtwint + 8) 
                            ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/init_propagate_block_info/src/obj/flow.o] Error 1
